referenssit-sivu #finished

--- a/referenssit.html
+++ b/referenssit.html
@@ -16,8 +16,218 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
   </head>
   <body>
+
+
+
+<a id="clenixstart"></a> <!-- Anchor for autoScroll.-->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 p-0 bg-primary vh-50 py-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-7 py-2 text-light">
+                            <h1 class="display-3 mb-0">
+
+
+                                <span>Referenssit</span>
+                            </h1>
+                            <p class="lead mb-3 w-75">
+                                <span></span><a class="font-weight-bold text-white" href="http://themestr.app"></a>
+                                <br><br><br>
+                                Tutustu asiakkaidemme palautteisiin
+                            </p>
+                                    </div>
+
+                                    </div>
+
+                        </div>
+                           </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+          <div class="container">
+
+
+              <div class="titlo">
+
+                  </div>
+                  </div>
+                  <br>
+
+
+                <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary" id="navbar1">
+                    <div class="container">
+                        <a class="navbar-brand mr-1 mb-1 mt-0" href="../"><img src="img\banner-logo.png" alt="Clenix"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+
+                        <div class="navbar-collapse collapse justify-content-center" id="collapsingNavbar">
+
+                            <ul class="navbar-nav ml-auto">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="kotisiivoukset.html">Kotisiivoukset</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="yrityssiivoukset.html">Yrityssiivoukset</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="tuhoelaintorjunta.html">Tuhoeläintorjunta</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="desinfiointi.html">Desinfiointi</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="raivaussiivous.html">Raivaussiivous</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="referenssit.html">Referenssit</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="rekrytointi.html">Rekrytointi</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="yritys.html">Yritys</a>
+                                </li>
+
+
+                                    </div>
+
+                        </div>
+                        <div class="phnum">
+                          <p>Siivouspalvelut p. 050 352 5081</p>
+                          <p>Tuhoeläintorjunta p. 010 3874 200</p>
+
+                        </div>
+
+                </nav>
+
+                <div class="midcontent">
+                <div class="container">
+                  <div class="card-body d-flex flex-column align-items-start">
+
+
+
+                    <h3 class="card-title text-primary"><strong>Kahden aikuisen koti, jossa vierailee lapsen lapsia</strong></h3>
+                      <p class="card-text">
+Haluamme ehdottomasti olla perhe joka suosittelee Clenixiä. Olemme näiden vuosien aikana suositelleet heitä jo useille perheille. Olemme erittäin tyytyväisiä toimintaan ja luotettavuuteen. Meillä on ollut ilo saada kotiimme erittäin ammattitaitoiset, yhteistyöhaluiset ja luotettavat siistijät. Kotimme on aina puhdas ja tilaamme myös säännöllisesti suuremmat siivoukset. Siivouksien lisäksi olemme tilanneet nurmikon leikkaamisen, lumenluonnin, muurahaisten myrkytykset ym.poissa ollessamme. Suosittelemme Clenixiä mielellämme kenelle tahansa.
+<br><br>
+– Terveisin, Marjatta ja Aarno, (Pyydettäessä Clenix saa antaa asiakkaan sähköpostiosoitteen, mikäli uusi asiakas haluaa lisätietoja.)
+<br><br>
+</p>
+                        </div>
+
+                  <div class="card-body d-flex flex-column align-items-start">
+                    <h3 class="card-title text-primary"><strong>Yrittäjäperhe, kolme lasta</strong></h3>
+                      <p class="card-text">
+Yhteistyö alkoi jo vuonna 2004. Molemmat vanhemmista tekevät paljon töitä ja perheessä harrastetaan myös paljon, joten aikaa kodinhoitamiseen ei oikein ole. Clenix tarjosi hyvää palvelukokonaisuutta ja yrityksen toiminnasta sai heti alkumetreiltä lähtien hyvän laadun vaikutelman, joka on vuosien mittaan pitänyt pintansa.
+<br><br>
+Halusimme yrityksen, joka osaa kartoittaa kotimme siivoustarpeet, tarjota aineet ja välineet. Siis ”avaimet käteen” periaatteella toimivaa yritystä. Tähän tarpeeseen Clenix on antanut hyvän vastineen. Tietysti hyvä siivousjälki, mutta myös se, että on osattu ottaa huomioon sellaisiakin asioita, joihin ei itse tule kiinnitettyä huomioita kuten esimerkiksi ilmanvaihtoventtiilien ja lattiakaivojen puhdistaminen. Henkilökunta on ammattitaitoista, ystävällistä ja luotettavaa. On aina ollut turvallinen mieli jättää koti heidän käsiinsä. Taloudessamme on kahden aikuisen lisäksi kolme lasta, kaksi kissaa ja koira.
+<br><br>
+Vähäistä vapaa-aikaa ei halua käyttää siivoamiseen, lisäksi kun Clenix käyttää omia välineitä ja aineita, niin olemme selvästi säästäneet näissä kuluissa vuosien mittaan. Ylläpitosiivousten välillä tarvitsee oikeastaan vain imuroida, ja hieman siistiä yleisesti muita paikkoja. Näin ollen perheelle jää enemmän vapaa-aikaa. Palvelu on ollut varsin joustavaa ja erityistarpeisiimme on saatu hyvin apua.
+<br><br>
+Myös omatoimisen siivoamisen suhteen olemme saaneet neuvoja ja opastusta oikeiden pesuaineiden käytön suhteen. Olemme käyttäneet myös lisäpalveluita ja nämäkin ovat järjestyneet joustavasti sekä lyhyellä varoajalla (lumityöt, pihatyöt ja silityspalvelut).
+<br><br>
+– Salon perhe, (Pyydettäessä Clenix saa antaa asiakkaan sähköpostiosoitteen, mikäli uusi asiakas haluaa lisätietoja.)
+<br><br>
+</p>
+                  </div>
+                  <div class="card-body d-flex flex-column align-items-start">
+                    <h3 class="card-title text-primary"><strong>Kiireiset uraihmiset ja kaksi lasta, viikoittainen siivous</strong></h3>
+                      <p class="card-text">
+                        Perheeseemme kuuluu kaksi aikuista ja 8- ja 18-vuotiaat. Minä olen perheen siisteysintoilija, mutta muita ei niinkään haittaa, jos muruja pyörii pöydillä tai pikkaisen pölyä on lattialla, joten perhesovun takaamiseksi kotisiivouspalvelu on erinomainen vaihtoehto. Työni on haastavaa, työn ja kodin välimatka pitkähkö ja reissaan lisäksi vielä jonkin verran, joten viikonloppuisin ja iltaisin käytän aikani mieluummin lasten ja puolison kanssa yhdessä olemiseen, ruuanlaittoon, ompelemiseen tai sisustamiseen kuin siivoamiseen tai siitä vääntämiseen. Pientä puunausta teen joka tapauksessa viikoittain vaikka Clenixin porukka käy kerran viikossa.
+                        <br><br>
+                        On ihanaa tulla kotiin perjantaina rankan työviikon jälkeen, kun koti on siisti. Se antaa energiaa ja hyvää mieltä viikonlopulle. Ei tarvitse lauantaita riidellä kuka siivoaa, miten siivoaa ja missä aikataulussa. Erinomaista on myös se, että koti pysyy suhteellisen hyvin järjestyksessä väkisinkin, kun torstai-iltana viimeistäänkin pitää laittaa tavarat paikalle. Teemme sen aina, jotta saamme mahdollisimman hyvän siivousjäljen. Siistijät saavat keskittyä olennaiseen ei tavaroiden nosteluun tai väistelyyn. Tällä tavalla myös teininkin huone on ainakin kerran viikossa siisti.
+                        <br><br>
+                        Perjantaisiivouksen ansiosta meillä on aikaa viikonloppuisin käydä kalassa, mökillä, kutsua vieraita, tehdä jotain omia juttuja ja rentoutua! Olen pitänyt suorasta, välittömästä ja joustavasta keskusteluyhteydestä. Kun olen esittänyt toiveita siivousajan muutoksen suhteen tai pyytänyt kiinnittämään johonkin asiaan erityistä huomiota, on toiveeni aina huomioitu.
+                        <br><br>
+                        Olen käyttänyt Clenixiä lähes 10 vuotta ja näiden vuosien aikana olen pettynyt vain kerran ja silloinkin Clenix hoiti asian kuntoon pikavauhtia. Sairastapauksen takia firma on peruuttanut tulonsa vain kaksi kertaa tällä aikavälillä. Jos jotain on jäänyt tekemättä, olen reklamoinut ja saanut joko tarjouksen että tulevat heti paikkaamaan tai huomioidaan jotenkin jollain extralla seuraavalla kerralla. Useinmiten olemme kuitenkin sopineet, ettei tähän ole tarvetta ja seuraavaa kertaa ei ole tullut. Pitkällä kokemuksella voin lämpimästi suositella Clenixiä kotisi siivouksen toteuttajaksi.
+                        <br><br>
+                         – Anne-Maarit Sepling (sähköpostiosoitteen saa pyydettäessä Clenixistä.)
+                         <br><br>
+</p>
+                  </div>
+
+                  <div class="card-body d-flex flex-column align-items-start">
+                    <h3 class="cardstit"><strong>Yrittäjäperhe ja pienet lapset</strong></h3>
+                      <p class="card-text">
+                        Olemme käyttäneet Clenixin kotisiivouspalveluita muutaman vuoden ajan. Siivoukset hoituvat hyvin ja sovittuihin aikatauluihin voi luottaa. Toiveita ja asiakaspalautetta kysellään sopivin aikavälein ja niitä on helppo antaa. Suosittelen lämpimästi!
+                        <br><br>
+                        – Niina Sjöblom (sähköpostiosoitteen saa pyydettäessä Clenixistä.)
+                        <br><br>
+</p>
+                  </div>
+
+
+                  <br>
+                  <br>
+                  <br>
+                  <div class="container">
+
+
+
+                  <br>
+                  <br>
+                  </div>
+
+                </div>
+                </div>
+
+                <div class="downmid">
+
+
+
+                </div>
+
+
+
+
+
+
+                <footer>
+                  <ul class="footlist1">
+                    <li><strong>Clenix Oy</strong></li>
+                    <li>Kuusamantie 15 A</li>
+                    <li>04330 Lahela</li>
+                    <li>clenix@clenix.fi</li>
+                    <li>Y-tunnus 1862973-9 </li>
+                  </ul>
+                  <div class="footlist2n3">
+                  <ul class="footlist2">
+                    <li><strong>Siivouspalvelut</strong></li>
+                    <li> <a href="#">050 352 5081</a> </li>
+                    <a href="https://fb.me/clenix_siivous"><img id="fbico" src="img/icon/fbico.png" alt="No icon available."></a>
+                  </ul>
+
+                  <ul class="footlist3">
+                    <li><strong>Tuhoeläintorjunta</strong></li>
+                    <li> <a href="#">010 3874 200</a> </li>
+                  </ul>
+                  </div>
+
+                  <ul class="vkrmkfooter">
+                    <li> <a href="#"><strong>Meiltä voit vuokrata myös mökin</strong></a> </li>
+                  </ul>
+                </div>
+
+                <div class="copyrite">
+                  <h6>Nettisivut by <a href="https://modernitnettisivut.fi/">modernitnettisivut.fi</a> </h6>
+
+                </div>
+
+
+
+                </footer>
+
+
 
   </body>
 </html>
